usando o git clone

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <div class="left">
-            <h3>Sessão</h3>
+            <h3>Sessão1</h3>
             <img src="imagens/carros.jpeg" alt="" width="200px">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia dolore explicabo tempore odit tenetur numquam eligendi delectus, provident, atque quos et officiis. Tempora sed modi unde rem exercitationem est distinctio.</p>
             <button class="btn">Saiba mais</button>
